--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,13 @@
 .PHONY: init run test
 
 init:
-	PYTHONPATH=backend python2 -c "from app import init_db; init_db()"
+	@echo "Initializing database..."
+	@cd .. && . venv/bin/activate && cd src/backend && python -c "from app import init_db; init_db()"
 
 run:
-	python2 ./backend/app.py
+	@echo "Starting Flask application..."
+	@cd .. && . venv/bin/activate && cd src/backend && python app.py
 
 test: 
-	PYTHONPATH=backend python2 ./backend/app_tests.py
-
+	@echo "Running tests..."
+	@cd .. && . venv/bin/activate && cd src/backend && python app_tests.py
