--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,4 +1,8 @@
-setuptools==44.1.1
-Werkzeug==2.3.0
+blinker==1.9.0
+click==8.3.1
+Flask==3.1.2
+itsdangerous==2.2.0
 Jinja2==3.1.2
-Flask==2.3.0 
+MarkupSafe==3.0.3
+setuptools==44.1.1
+Werkzeug==3.1.5
