config data in database.yml added

--- a/ruby-sinatra/config/database.yml
+++ b/ruby-sinatra/config/database.yml
@@ -5,3 +5,9 @@
 #development:
   #adapter: sqlite3
   #database: ../whoknows.db
+
+development:
+  adapter: sqlite3
+  database: ../whoknows.db
+  pool: 5
+  timeout: 5000
