--- a/ruby-sinatra/Gemfile
+++ b/ruby-sinatra/Gemfile
@@ -1,16 +1,21 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "sinatra", "~> 3.0"
-gem "sinatra-activerecord"
-gem "activerecord", "~> 7.0"
-gem "sqlite3", "~> 1.6"
-gem "ostruct" # We avoid this warning: warning: ostruct was loaded from the standard library, but will no longer be part of the default gems starting from Ruby 4.0.0.
-gem "rackup"
-gem "puma"
-gem "dotenv"
+gem 'activerecord', '~> 7.0'
+gem 'ostruct' # We avoid this warning: warning: ostruct was loaded from the standard library, but will no longer be part of the default gems starting from Ruby 4.0.0.
+gem 'puma'
+gem 'rackup'
+gem 'sinatra', '~> 3.0'
+gem 'sinatra-activerecord'
+gem 'sqlite3', '~> 1.6'
+
 group :test do
-  gem 'rspec'
   gem 'rack-test' # Simulates HTTP requests in tests
+  gem 'rspec'
+end
+
+group :development, :test do
+  gem 'dotenv'
+  gem 'rubocop', '~> 1.60', require: false # When app is running, don't load RuboCop. We load it through CLI
 end
